gts/GenericTabset Builder/main/default/objects/LTX_Credit_Details__c/fields/LTX_Contact__c.field-meta.xml
<CustomField>
    <fullName>LTX_Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Credit_Details</relationshipLabel>
    <relationshipName>Credit_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>