gts/GenericTabset Builder/main/default/objects/LTX_Credit_Details__c/fields/LTX_Credit_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>LTX_Credit_Recommendation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Recommendation</label>
    <type>Checkbox</type>
</CustomField>