gts/GenericTabset Builder/main/default/objects/LTX_Credit_Details__c/fields/LTX_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>LTX_Credit_Score__c</fullName>
    <label>Credit Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>