gts/GenericTabset Builder/main/default/objects/LTX_Credit_Details__c/fields/LTX_Current_Balance_in_Account__c.field-meta.xml
<CustomField>
    <fullName>LTX_Current_Balance_in_Account__c</fullName>
    <label>Current Balance in Account</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>