gts/GenericTabset Builder/main/default/objects/LTX_Credit_Details__c/fields/LTX_Existing_Loan__c.field-meta.xml
<CustomField>
    <fullName>LTX_Existing_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Loan</label>
    <type>Checkbox</type>
</CustomField>